# Clients

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.claude/: settings.json
dashboard/: .env.local.example  middleware.ts  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: DemoViewportFrame.tsx
dashboard/lib/: supabase.ts  types.ts
docs/: AI_CHAT_AGENT.md  BUILD_PLAN.md  PRODUCT_SPEC.md  TEMPLATE_SPEC.md
docs/contract/: service-agreement-template.md
docs/plans/: 2026-03-20-launch-readiness.md  2026-03-21-housekeeping-v5-design.md  2026-03-23-email-sequence-implementation.md  2026-03-23-email-sequence-strategy-design.md  2026-03-28-contract-rewrite-design.md
landing/: index.html
pipeline/: .env.example  config.py  models.py  pyproject.toml  run_campaign.py
pipeline/analysis/: content_extractor.py  lead_qualifier.py  pagespeed.py  playwright_runner.py  scorer.py  scoring_prompt.py  seo_checker.py
pipeline/db/: client.py  schema.sql
pipeline/delivery/: resend_sender.py
pipeline/generation/: color_scheme.py  content_upgrader.py  logo_extractor.py  photos.py  storage_deploy.py  template_engine.py
pipeline/ingestion/: base.py  deduplication.py  google_places.py  self_scraper.py
pipeline/outreach/: comparison_builder.py  contact_extractor.py  email_drafter.py
scripts/: redraft_outreach.py  regenerate_comparisons.py  reset_demos.py  reset_outreach_drafts.py
templates/housekeeping-v1/: index.html  styles.css  template_spec.json
templates/housekeeping-v2/: index.html  script.js  styles.css  (+1 more)
(+52 files in other folders)
